--- a/index.html
+++ b/index.html
@@ -36,11 +36,42 @@
                 </div>
                 
             </div>
+            <video autoplay loop muted src="https://download-video.akamaized.net/v3-1/playback/ea709ea7-d205-45c7-9919-b6484f30fa24/b7e94ef4?__token__=st=1709956939~exp=1709971339~acl=%2Fv3-1%2Fplayback%2Fea709ea7-d205-45c7-9919-b6484f30fa24%2Fb7e94ef4%2A~hmac=26a5ad6e18f45a522db807d500ee38c920b531afcaad7c58981bfb92223fc178&r=dXMtZWFzdDE%3D"></video>
+            <div class="shape">
+                <div class="shape-1"></div>
+                <div class="shape-2"></div>
+                <div class="shape-3"></div>
+            </div>
         </div>
 
         <!-- page2 :::::::::::::::::::::::::::::::::::::::::: -->
         <div class="page2">
-
+            <div id="moving-text">
+                <div class="con">
+                    <h1>EXPERIENCES</h1>
+                    <div id="gola"></div>
+                    <h1>CONTENT</h1>
+                    <div id="gola"></div>
+                    <h1>ENVIRONMENTS</h1>
+                    <div id="gola"></div>
+                </div>
+                <div class="con">
+                    <h1>EXPERIENCES</h1>
+                    <div id="gola"></div>
+                    <h1>CONTENT</h1>
+                    <div id="gola"></div>
+                    <h1>ENVIRONMENTS</h1>
+                    <div id="gola"></div>
+                </div>
+                <div class="con">
+                    <h1>EXPERIENCES</h1>
+                    <div id="gola"></div>
+                    <h1>CONTENT</h1>
+                    <div id="gola"></div>
+                    <h1>ENVIRONMENTS</h1>
+                    <div id="gola"></div>
+                </div>
+            </div>
         </div>
     </div>
 
