--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
                     <div id="gola"></div>
                 </div>
             </div>
+            <div class="page2-bottom">
+                <div class="b-left">
+                    <div class="text">
+                        <h1>We are a group of design-driven, goal-focused creators, producers, and designers who believe that the details make all the difference.</h1>
+                    </div>
+                    <h5><div id="round"></div>FEATURED PROJECTS</h5>
+                </div>
+                <div class="b-right">
+                    <div class="images">
+                        <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d1_Holding_thumb-p-800.jpg" alt="">
+                    </div>
+                    <p>We love to create, we love to solve, we love to collaborate, and we love to turn amazing ideas into reality. We’re here to partner with you through every step of the process and know that relationships are the most important things we build.</p>
+                </div>
+            </div>
         </div>
     </div>
 
