site with animation is done

--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
                         create a final design that encompasses the brand narrative to bring stories to life and
                         provide end-to-end design solutions from concept, design, and architectural drawings to 3D
                         renderings."
-                        data-images="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15e1_Project.webp">Design</h1>
+                        data-images="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15e1_Project.webp" id="h1t">Design</h1>
                         <h1 data-info="Once we have a design, our production team takes the lead in bringing it to life. We manage all stages of the project, from build specifications and technical drawings to site surveys, vendor management, and 2D & 3D production. We have an extensive network of partners to meet each unique design and project need."
-                            data-images="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d0_Project.webp">Project</h1>
+                            data-images="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d0_Project.webp" id="h2t">Project</h1>
                         <h1 data-info="We’re with you every step of the way, from the project initiation to launch day. Our production and design teams are onsite to direct and guide the process down to the last point of completion, ensuring success across the built space and experience."
-                            data-images="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15cd_Execution.webp">Execution</h1>
+                            data-images="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15cd_Execution.webp" id="h3t">Execution</h1>
                     </div>
                     <div class="workinfo">
                         <p class="change">Our team works with our clients to refine an idea and concept into an executable design. We
