make responsive start

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <h4><a href="">Studio </a></h4>
                     <h4><a href="">Contact </a></h4>
                 </div>
+                <h3>Menu</h3>
             </nav>
             <div class="intro">
                 <div id="left">
@@ -320,14 +321,9 @@
 
         <!-- page6:::::::::::::::::::::::::::::::::::::::::::::: -->
         <div class="page6">
-
         </div>
 
-
     </div>
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
