--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SundownStudio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
 
 <body>
+    <!-- loder -->
     <div class="loder">
         <h1>Environments</h1>
         <h1>Experiences</h1>
         <h1>Content</h1>
     </div>
 
+    <!-- fix-imgee for work section -->
     <div class="fix-image"></div>
 
+    <!-- last footer page -->
     <footer>
         <div class="top">
             <div class="top-left">
@@ -65,7 +69,7 @@
                     <h4><a href="">Studio </a></h4>
                     <h4><a href="">Contact </a></h4>
                 </div>
-                <h3>Menu</h3>
+                <h3><i id="m1" class="ri-menu-line"></i><i id="m2" class="ri-close-large-line"></i> Menu</h3>
             </nav>
             <div class="intro">
                 <div id="left">
@@ -323,7 +327,19 @@
         <div class="page6">
         </div>
 
+        <!-- fix menu for phone -->
+        <div class="fixmenu">
+            <div class="menutop">
+                <div class="menu-text">
+                    <h1>work</h1>
+                <h1>studio</h1>
+                <h1>contact</h1>
+                </div>
+                </div>
+        </div>
     </div>
+
+    
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
